--- a/Shopping List/style.css
+++ b/Shopping List/style.css
@@ -4,6 +4,17 @@
   	margin-right: auto;
   }
 
+.button{
+	text-align: center;
+	margin-left: auto;
+  	margin-right: auto;
+  }
+.container{
+	text-align: center;
+	margin-left: auto;
+  	margin-right: auto;
+  }
+
   body {
 	background-color: aliceblue;
 	display:block;
@@ -23,4 +34,3 @@
 	margin: 0;
 	font-family: 'Times New Roman', Times, serif;
   }
-
