--- a/Task-manager-main/components/HTML/header.html
+++ b/Task-manager-main/components/HTML/header.html
@@ -1,4 +1,6 @@
-const header = (
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <header>
     <div class="px-3 py-2 bg-dark text-white">
       <div class="container">
@@ -45,7 +47,7 @@ const header = (
     <div class="px-3 py-2 border-bottom mb-3">
       <div class="container d-flex flex-wrap justify-content-center">
         <form class="col-12 col-lg-auto mb-2 mb-lg-0 me-lg-auto">
-          <input type="search" class="form-control" placeholder="Search..." aria-label="Search" />
+          <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
         </form>
 
         <div class="text-end">
@@ -56,9 +58,6 @@ const header = (
     </div>
   </header>
 
-  );
 
-  export default header
-  //needs the logic for routing pages
-  //needs search logic
-  //needs signin/out via google logic here?
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
