--- a/tasklist/style.css
+++ b/tasklist/style.css
@@ -11,6 +11,17 @@ body {
 	padding: 10px;
 }
 
+.button {
+  text-align: center;
+  display:block;
+  align-items: center;
+  justify-content: center;
+  font-size: 10px; 
+  border: 10px, groove, black;
+  margin: 70px;
+  padding: 10px;
+}
+
 .center {
 	text-align: center;
 }
@@ -39,8 +50,6 @@ padding: 50px
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&display=swap");
-
-
 
 .app form {
   display: flex;
@@ -79,43 +88,119 @@ padding: 50px
   border-bottom: 1px solid #3a4674;
 }
 
-.check {
-  width: 0.8em;
-  height: 0.8em;
-  cursor: pointer;
-  border-radius: 50%;
-  background-color: white;
-  border: 1px solid rgb(255, 255, 255);
-  -webkit-appearance: none;
+html {
+  box-sizing: border-box;
 }
 
-.check:checked {
-  background-color: whitesmoke;
+*, *::before, *::after {
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
 }
 
-.task {
-  font-size: 18px;
-  padding: 0 10px;
-  width: fit-content;
-  background: transparent;
-  border: none;
-  color: black;
+body {
+ font-family:
+ -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans,
+  Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+ line-height: 1.4;
 }
 
-.task:focus {
-  outline: none;
+.container {
+  width: 100%;
+  max-width: 500px;
+  margin: 0 auto;
+  padding-left: 10px;
+  padding-right: 10px;
+  color: #333;
+  height: 90vh;
+  margin-top: 5vh;
+  margin-bottom: 5vh;
+  overflow-y: auto;
 }
 
-.app ul li i {
-  float: right;
-  cursor: pointer;
+.app-title {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 80px;
+  opacity: 0.5;
 }
 
-.app ul li i:hover {
-  color: blue;
+svg {
+  width: 64px;
+  height: 64px;
 }
 
-.completed {
-  color: red;
+.todo-list {
+  list-style: none;
+  margin-bottom: 20px;
+}
+
+.todo-item {
+  margin-bottom: 10px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.todo-item span {
+  flex-grow: 1;
+  margin-left: 10px;
+  margin-right: 10px;
+  font-size: 22px;
+}
+
+.done span {
   text-decoration: line-through;
+}
+
+input[type="checkbox"] {
+  display: none;
+}
+
+.tick {
+  width: 30px;
+  height: 30px;
+  border: 3px solid #333;
+  border-radius: 50%;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.tick::before {
+  content: '✓';
+  font-size: 20px;
+  display: none;
+}
+
+.done .tick::before {
+  display: inline;
+}
+
+.delete-todo {
+  border: none;
+  background-color: transparent;
+  outline: none;
+  cursor: pointer;
+}
+
+.delete-todo svg {
+  width: 30px;
+  height: 30px;
+  pointer-events: none;
+}
+
+form {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+input[type="text"] {
+  width: 100%;
+  padding: 10px;
+  border-radius: 4px;
+  border: 3px solid #333;
 }
